@@ -88,8 +88,8 @@ public class JobParametersTests {
 
 	@Test
 	public void testGetDouble() {
-		assertEquals(new Double(1.1), new Double(parameters.getDouble("double.key1")));
-		assertEquals(new Double(2.2), new Double(parameters.getDouble("double.key2")));
+		assertEquals(Double.valueOf(1.1d), parameters.getDouble("double.key1"));
+		assertEquals(Double.valueOf(2.2d), parameters.getDouble("double.key2"));
 	}
 
 	@Test
