@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2007 the original author or authors.
+ * Copyright 2006-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -247,7 +247,7 @@ public class StepParserStepFactoryBeanTests {
 		Object step = fb.getObject();
 		assertTrue(step instanceof TaskletStep);
 		Object throttleLimit = ReflectionTestUtils.getField(ReflectionTestUtils.getField(step, "stepOperations"), "throttleLimit");
-		assertEquals(new Integer(10), throttleLimit);
+		assertEquals(Integer.valueOf(10), throttleLimit);
 		Object tasklet = ReflectionTestUtils.getField(step, "tasklet");
 		assertTrue(tasklet instanceof ChunkOrientedTasklet<?>);
 		assertFalse((Boolean) ReflectionTestUtils.getField(tasklet, "buffering"));
