@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2009 the original author or authors.
+ * Copyright 2006-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -55,6 +55,7 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
 import org.springframework.dao.DeadlockLoserDataAccessException;
+import org.springframework.jdbc.datasource.DataSourceTransactionManager;
 import org.springframework.retry.RetryListener;
 import org.springframework.retry.listener.RetryListenerSupport;
 import org.springframework.test.util.ReflectionTestUtils;
@@ -65,6 +66,7 @@ import org.springframework.transaction.interceptor.DefaultTransactionAttribute;
 /**
  * @author Thomas Risberg
  * @author Dan Garrette
+ * @author Mahmoud Ben Hassine
  */
 public class StepParserTests {
 
@@ -89,7 +91,7 @@ public class StepParserTests {
 		TaskletStep bean = (TaskletStep) factory.getObject();
 		assertEquals("wrong start-limit:", 25, bean.getStartLimit());
 		Object throttleLimit = ReflectionTestUtils.getField(factory, "throttleLimit");
-		assertEquals(new Integer(10), throttleLimit);
+		assertEquals(Integer.valueOf(10), throttleLimit);
 	}
 
 	@Test
@@ -297,7 +299,7 @@ public class StepParserTests {
 	public void testTransactionManagerDefaults() throws Exception {
 		ApplicationContext ctx = stepParserParentAttributeTestsCtx;
 
-		assertTrue(getTransactionManager("defaultTxMgrStep", ctx) instanceof ResourcelessTransactionManager);
+		assertTrue(getTransactionManager("defaultTxMgrStep", ctx) instanceof DataSourceTransactionManager);
 
 		assertDummyTransactionManager("specifiedTxMgrStep", "dummyTxMgr", ctx);
 
